--- a/redux-saga-oauth/package.json
+++ b/redux-saga-oauth/package.json
@@ -6,7 +6,9 @@
     "cra-template-typescript": "1.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "typescript": "^4.4.2",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,6 +36,7 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.15",
+    "@types/react-dom": "^17.0.9",
     "prettier": "^2.3.2",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
