--- a/redux-saga-oauth/package.json
+++ b/redux-saga-oauth/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/styled-components": "^5.1.13",
     "cra-template-typescript": "1.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.1",
+    "styled-normalize": "^8.0.7",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
