--- a/redux-saga-oauth/package.json
+++ b/redux-saga-oauth/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
+    "styled-icons": "^10.38.0",
     "styled-normalize": "^8.0.7",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
