--- a/redux-saga-oauth/package.json
+++ b/redux-saga-oauth/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.1.8",
+    "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.1.13",
     "cra-template-typescript": "1.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.3.1",
     "styled-icons": "^10.38.0",
     "styled-normalize": "^8.0.7",
@@ -43,7 +48,9 @@
   "devDependencies": {
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
+    "@types/redux-devtools-extension": "^2.13.2",
     "prettier": "^2.3.2",
+    "redux-devtools": "^3.7.0",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.3.0"
