--- a/redux-saga-oauth/package.json
+++ b/redux-saga-oauth/package.json
@@ -8,6 +8,7 @@
     "@types/react-router-dom": "^5.1.8",
     "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.1.13",
+    "@types/uuid": "^8.3.1",
     "cra-template-typescript": "1.1.2",
     "qs": "^6.10.1",
     "react": "^17.0.2",
@@ -21,6 +22,7 @@
     "styled-icons": "^10.38.0",
     "styled-normalize": "^8.0.7",
     "typescript": "^4.4.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
