--- a/redux-saga-oauth/package.json
+++ b/redux-saga-oauth/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/qs": "^6.9.7",
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.1.8",
     "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.1.13",
     "@types/uuid": "^8.3.1",
+    "axios": "^0.21.1",
     "cra-template-typescript": "1.1.2",
     "qs": "^6.10.1",
     "react": "^17.0.2",
