--- a/oauth-server/package.json
+++ b/oauth-server/package.json
@@ -4,21 +4,32 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app.ts",
+    "start": "nodemon --exec ts-node app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/node": "^16.7.10",
-    "ts-node": "^10.2.1"
-  },
   "dependencies": {
     "@types/cors": "^2.8.12",
+    "esm": "^3.2.25",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "typescript": "^4.4.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.7.10",
+    "ts-node": "^10.2.1",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.3.0",
+    "prettier": "^2.3.2",
+    "nodemon": "^2.0.4"
+  },
+  "babel": {
+    "presets": [
+      "@babel/env"
+    ]
   }
 }
