--- a/redux-saga-oauth/package.json
+++ b/redux-saga-oauth/package.json
@@ -60,5 +60,6 @@
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.3.0"
-  }
+  },
+  "proxy": "https://github.com/"
 }
