--- a/oauth-server/package.json
+++ b/oauth-server/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "@types/cors": "^2.8.12",
-    "esm": "^3.2.25",
+    "axios": "^0.21.4",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "typescript": "^4.4.2"
   },
